@@ -1,6 +1,15 @@
 # The GDAL and OGR driver registry.
 # GDAL driver management.
 
+import logging
+
+from six import string_types
+
+cdef extern from "cpl_conv.h":
+    void    CPLFree (void *ptr)
+    void    CPLSetThreadLocalConfigOption (char *key, char *val)
+    const char * CPLGetConfigOption ( const char *key, const char *default)
+
 cdef extern from "cpl_error.h":
     void    CPLSetErrorHandler (void *handler)
 
@@ -13,9 +22,6 @@ cdef extern from "ogr_api.h":
     void OGRRegisterAll()
     void OGRCleanupAll()
     int OGRGetDriverCount()
-
-import logging
-
 
 log = logging.getLogger('Fiona')
 class NullHandler(logging.Handler):
@@ -40,19 +46,40 @@ def driver_count():
 
 cdef class DriverManager(object):
     
+    cdef object options
+
+    def __init__(self, **options):
+        self.options = options.copy()
+
     def __enter__(self):
+        cdef const char *key_c
+        cdef const char *val_c
         CPLSetErrorHandler(<void *>errorHandler)
         GDALAllRegister()
         OGRRegisterAll()
         if driver_count() == 0:
             raise ValueError("Drivers not registered")
+        for key, val in self.options.items():
+            key_b = key.upper().encode('utf-8')
+            key_c = key_b
+            if isinstance(val, string_types):
+                val_b = val.encode('utf-8')
+            else:
+                val_b = ('ON' if val else 'OFF').encode('utf-8')
+            val_c = val_b
+            CPLSetThreadLocalConfigOption(key_c, val_c)
+            log.debug("Option %s=%s", key, CPLGetConfigOption(key_c, NULL))
         return self
 
     def __exit__(self, exc_type=None, exc_val=None, exc_tb=None):
+        cdef const char *key_c
         GDALDestroyDriverManager()
         OGRCleanupAll()
         CPLSetErrorHandler(NULL)
         if driver_count() != 0:
             raise ValueError("Drivers not de-registered")
-
+        for key in self.options:
+            key_b = key.upper().encode('utf-8')
+            key_c = key_b
+            CPLSetThreadLocalConfigOption(key_c, NULL)
 
